Fix immutable list modification, apply codestyle changes